# xian-contracting

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  release.sh  setup.py
.github/workflows/: publish.yml  release.yml  validate.yml
docs/: ARCHITECTURE.md  BACKLOG.md  COMPILER_NAME_REFACTOR_DRAFT.md  COMPILER_RELEASE.md  COMPILE_TIME_EXTENDS.md  EXECUTION_BACKLOG.md  NATIVE_PARALLEL_EXECUTION_PLAN.md  PARALLEL_EXECUTION.md  README.md  RUST_COMPILER_CORE.md  SAFETY_INVARIANTS.md  SHIELDED_HASH_REDESIGN.md  SHIELDED_STATE_REDESIGN_V2.md  SHIELDED_STATE_REDUCTION_PLAN.md  TRACER_BACKENDS.md  ZK_PRIVACY_OPTIMIZATION_PLAN.md  ZK_TRUSTED_SETUP_OPTIONS.md  compiler_fixture_v1.schema.json
examples/: 01 A very simple Counter contract.ipynb  02 Ingredients of a Smart Contract.ipynb  03 Interacting with the Client.ipynb  04 Standard Library and Extending Contracting.ipynb  05 Imports and Advanced Data Storage.ipynb  README.md  Rock Paper Scissors Tutorial.ipynb  validate_notebooks.py
scripts/: README.md  audit_authored_conformance.py  audit_compiler_core_parity.py  audit_python_vm_compatibility.py  audit_vm_compatibility.py  audit_vm_ir_lowering.py  audit_vm_metering.py  generate_compiler_fixtures.py  generate_vm_parity_fixtures.py  validate-release.sh
src/: README.md
src/contracting/: README.md  __init__.py  client.py  constants.py  names.py  runtime_features.py
src/contracting/artifacts/: __init__.py
src/contracting/compilation/: artifacts.py  authored_conformance.py  compiler.py  conformance.py  ir.py  linter.py  lowering.py  parser.py  python_compatibility.py  sources.py  vm.py  whitelists.py
src/contracting/compiler/: __init__.py  fixtures.py
src/contracting/contracts/: submission.s.py  submission_source.s.py  zk_registry.s.py
src/contracting/execution/: __init__.py  executor.py  module.py  native_tracer.py  parallel.py  python_tracer.py  runtime.py  sandbox.py  tracer.py  tracer_common.py
src/contracting/local/: __init__.py  client.py
src/contracting/stdlib/: builtins.py  env.py
src/contracting/stdlib/bridge/: access.py  crypto.py  hashing.py  imports.py  orm.py  random.py  time.py  zk.py
src/contracting/storage/: contract.py  driver.py  encoder.py  hdf5.py  lmdb_environment.py  lmdb_store.py  orm.py
tests/: README.md  conftest.py
tests/integration/: test_atomic_swap.py  test_builtins_locked_off.py  test_chi_deduction.py  test_complex_contracts.py  test_complex_object_setting.py  test_constructor_args.py  test_crypto_contract_submission.py  test_crypto_metering.py  test_datetime_contracts.py  test_dynamic_imports.py  test_ecdsa_stamp_deduction.py  test_executor_submission_process.py  test_executor_transaction_writes.py  test_export_typecheck.py  test_failed_cross_contract_revert.py  test_ifexp_support.py  test_memory_clean_up_after_execution.py  test_misc_contracts.py  test_parallel_batch_executor.py  test_pixel_game.py  test_rich_ctx_calling.py  test_run_private_function.py  test_senecaCompiler_integration.py  test_seneca_client_randoms.py  test_seneca_client_replaces_executor.py  test_stamp_deduction.py  test_tracer_workloads.py  test_vm_language_conformance.py  test_vm_metering_audit.py  test_vm_stateful_fuzz.py  test_zk_bridge.py
tests/integration/test_contracts/: atomic_swaps.s.py  builtin_lib.s.py  crypto_usage.s.py  dynamic_ctx_probe.s.py  dynamic_importing.s.py  hashing_works.s.py  orm_no_contract_access.s.py  otc_failure.s.py  owner_stuff.s.py  submission.s.py  zk_probe.s.py  zk_registry.s.py
tests/performance/: benchmark_parallel_tps.py  prof_transfer.py  test_transfer.py
tests/performance/test_contracts/: submission.s.py
tests/security/: test_erc20_token_hacks.py  test_runtime_security.py
tests/security/contracts/: con_inf_writes.s.py  infinate_loop.s.py  submission.s.py
tests/unit/: test_access_context.py  test_artifacts.py  test_authored_conformance.py  test_client.py  test_client_keys_prefix.py  test_compiler.py  test_compiler_core_parity.py  test_compiler_fixtures.py  test_conformance_manifest.py  test_context_data_struct.py  test_contract_names.py  test_contract_runtime_guards.py  test_contract_storage.py  test_contracting_collections.py  test_crypto.py  test_datetime.py  test_decimal.py  test_driver_tombstones.py  test_ecdsa_crypto.py  test_encode.py  test_imports_stdlib.py  test_ir_lowering.py  test_linter.py  test_lmdb_store.py  test_module.py  test_native_tracer.py  test_new_driver.py  test_orm.py  test_parallel_planner.py  test_parser.py  test_python_vm_compatibility.py  test_revert_on_exception.py  test_runtime.py  test_speculative_controller.py  test_state_management.py  test_stdlib_crypto.py  test_stdlib_hashing.py  test_stdlib_random.py  test_timedelta.py  test_tracer.py  (+2 more)
tests/unit/precompiled/: updated_submission.py
tests/unit/test_sys_contracts/: currency.s.py  module1.py  module2.py  module3.py  module5.py  module6.py
