[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xian-contracting"
version = "1.0.1"
description = "Xian Network Python Contracting Engine"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "Xian Network", email = "info@xian.org" }]
requires-python = ">=3.12"
dependencies = [
    "autopep8>=1.5.7,<2",
    "cachetools>=5,<6",
    "lmdb>=1.6,<2",
    "pynacl>=1.5.0,<2",
]
keywords = ["blockchain", "xian", "contracting", "python"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
Repository = "https://github.com/xian-technology/xian-contracting"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.15.6,<0.16",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contracting = ["contracts/*.s.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py312"
exclude = [
    "examples",
    "tests/integration/test_contracts",
    "tests",
    "tests/performance/test_contracts",
    "tests/security/contracts",
    "tests/unit/contracts",
    "tests/unit/precompiled",
    "tests/unit/test_sys_contracts",
    "src/contracting/contracts",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
