[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xian-tech-contracting"
version = "1.0.10"
description = "Xian Network Python Contracting Engine"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "Xian Network", email = "info@xian.org" }]
requires-python = ">=3.14,<3.15"
dependencies = [
    "cachetools>=7.0.6,<8",
    "lmdb>=2.2.0,<3",
    "pynacl>=1.5.0,<2",
    "xian-tech-compiler-core>=0.1.1,<0.2",
    "xian-tech-runtime-types>=0.1.2,<0.2",
]
keywords = ["blockchain", "xian", "contracting", "python"]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
Repository = "https://github.com/xian-technology/xian-contracting"

[project.optional-dependencies]
native = [
    "xian-tech-fastpath-core>=0.1.0,<0.2",
]
zk = [
    "xian-tech-zk>=0.1.5,<0.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.3,<7",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.12,<0.16",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contracting = ["contracts/submission.s.py", "contracts/submission_source.s.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not optional_native'"
markers = [
    "optional_native: requires optional native/Rust extension packages and is run by the native CI job",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "examples",
    "tests/integration/test_contracts",
    "tests",
    "tests/performance/test_contracts",
    "tests/security/contracts",
    "tests/unit/contracts",
    "tests/unit/precompiled",
    "tests/unit/test_sys_contracts",
    "src/contracting/contracts",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.uv.sources]
xian-tech-runtime-types = { path = "packages/xian-runtime-types", editable = true }
xian-tech-compiler-core = { path = "packages/xian-compiler-core" }
xian-tech-fastpath-core = { path = "packages/xian-fastpath-core", editable = true }
xian-tech-zk = { path = "packages/xian-zk", editable = true }
